fixed navbar resizing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .nav{
   /* border: 5px solid red; */
-  height: 5%;
+  height: auto;
 }
 
 .page{
